--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,4 +1,5 @@
-body, html {
+body,
+html {
   height: 100%;
   background-color: red;
 }
@@ -19,4 +20,5 @@ body, html {
   justify-content: space-between;
 }*/
 
+@import "partials/layout";
 @import "~bootstrap/scss/bootstrap";
