--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,8 @@ code {
 
 /*Styling for the map, unsure if it should be here - glitches into navbar */ 
 .leaflet-container {
-  width: 100vw; 
-  height: 100vh; 
+  border: 1px solid black;
+  margin: 20px 20px 20px 20px;
+  width: 80vw; 
+  height: 80vh; 
 }
