added game title field to create games post method

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -7,4 +7,5 @@ html {
 @import "partials/layout";
 @import "partials/map";
 @import "partials/modal";
+@import "partials/forms";
 @import "~bootstrap/scss/bootstrap";
