--- a/src/sass/partials/_map.scss
+++ b/src/sass/partials/_map.scss
@@ -5,3 +5,11 @@
   width: 80vw;
   height: 80vh;
 }
+
+.join-button {
+  height: 50px;
+  width: 50px;
+  padding: 15% !important;
+  z-index: 500;
+  top: 85%;
+}
