styled button and added conditional functionality join button

--- a/src/sass/partials/_map.scss
+++ b/src/sass/partials/_map.scss
@@ -7,9 +7,10 @@
 }
 
 .join-button {
-  height: 50px;
-  width: 50px;
-  padding: 15% !important;
+  height: 100px;
+  width: 100px;
+  line-height: 100px;
   z-index: 500;
   top: 85%;
+  text-align: center;
 }
