added players list and toggle switch to edit page

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -13,4 +13,5 @@ $secondary: #587E8C;
 @import "partials/modal";
 @import "partials/forms";
 @import "partials/nav";
+@import "partials/icons";
 @import "~bootstrap/scss/bootstrap";
