--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -3,7 +3,9 @@ html {
   height: 100%;
 }
 
+$body-bg: rgb(16, 16, 55);
 $link-color: rgb(0, 0, 0);
+$link-hover-color: white;
 $primary: #8C0303;
 $secondary: #587E8C;
 
@@ -14,4 +16,5 @@ $secondary: #587E8C;
 @import "partials/forms";
 @import "partials/nav";
 @import "partials/icons";
+@import "partials/games";
 @import "~bootstrap/scss/bootstrap";
