--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -5,7 +5,7 @@ html {
 
 $body-bg: rgb(16, 16, 55);
 $link-color: rgb(0, 0, 0);
-$link-hover-color: white;
+$link-hover-color: grey;
 $primary: #8C0303;
 $secondary: #587E8C;
 
