added images and animation to landing page

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -10,6 +10,7 @@ $primary: #8C0303;
 $secondary: #587E8C;
 
 
+@import "partials/animation";
 @import "partials/layout";
 @import "partials/map";
 @import "partials/modal";
