--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -18,4 +18,5 @@ $secondary: #587E8C;
 @import "partials/nav";
 @import "partials/icons";
 @import "partials/games";
+@import "partials/chat"; 
 @import "~bootstrap/scss/bootstrap";
