added delete and edit squad

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -3,6 +3,9 @@ html {
   height: 100%;
 }
 
+input {
+  color: white;
+}
 $body-bg: rgb(16, 16, 55);
 $link-color: rgb(0, 0, 0);
 $link-hover-color: grey;
