--- a/src/sass/partials/_games.scss
+++ b/src/sass/partials/_games.scss
@@ -1,5 +1,5 @@
 .game-card {
-  background-color: rgb(246, 246, 216);
+  background-color: #facd63;
   position: relative;
   width: 100%;
   height: 150px;
@@ -11,9 +11,9 @@
       position: absolute;
       top: 0;
       left: 0;
-      border-bottom: 29px solid rgb(246, 246, 216);
-      border-left: 29px solid white;
-      border-right: 29px solid white;
+      border-bottom: 29px solid #facd63;
+      border-left: 29px solid $customBackground;
+      border-right: 29px solid $customBackground;
   }
   &:after {
     content: "";
@@ -22,9 +22,9 @@
       position: absolute;
       bottom: 0;
       left: 0;
-      border-top: 29px solid rgb(246, 246, 216);;
-      border-left: 29px solid white;
-      border-right: 29px solid white;
+      border-top: 29px solid #facd63;;
+      border-left: 29px solid $customBackground;
+      border-right: 29px solid $customBackground;
   }
 }
 
