added styling to chat

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -12,7 +12,7 @@ $custom-dark: #2e2e2e;
 $body-bg:#a78eb8;
 $dark: $custom-dark;
 $customBackground: $body-bg;
-$link-color: $custom-dark;
+$link-color: $dark;
 $link-hover-color: $custom-dark;
 $primary: #fd990d;
 $secondary: #644b77;
