--- a/src/sass/partials/_chat.scss
+++ b/src/sass/partials/_chat.scss
@@ -2,9 +2,10 @@
 input {
     padding: 10px;
     font-size: 1.2em;
+    color: black;
   }
   
-  button{
+  .chat-button{
     border: none;
     padding: 10px;
     background: green;
@@ -31,25 +32,27 @@ input {
 
   .chat-box{
     box-shadow:0 2.8px 2.2px rgba(0, 0, 0, 0.034),0 6.7px 5.3px rgba(0, 0, 0, 0.048),0 12.5px 10px rgba(0, 0, 0, 0.06),0 22.3px 17.9px rgba(0, 0, 0, 0.072),0 41.8px 33.4px rgba(0, 0, 0, 0.086),0 100px 80px rgba(0, 0, 0, 0.12);
-    margin:40px 50px;
-    height: 600px;
+    margin-top: 20px;
+    height: 800px;
     padding: 10px;
     display: flex;
     flex-direction: row;
   }
   
   .member-list{
-    width: 20%;
+    width: 30%;
   }
   
   .chat-content{
-    width:80%;
+    width:95%;
     margin-left: 10px;
-    
+    max-width: 700px;
+    height: 100%;
   }
   
   .chat-messages{
-    height: 80%;
+    height: 70%;
+    max-width: 700px;
     border: 1px solid #000;
     overflow-y: scroll;
     overflow-anchor: auto; 
@@ -65,7 +68,8 @@ input {
   
   .input-message{
     width:90%;
-    border-radius: 50px;
+    border-radius: 10px;
+    margin-top: 50px;
   }
   
   ul {
@@ -73,21 +77,23 @@ input {
     list-style-type: none;
   }
   .send-button{
-    width:10%;
-    border-radius: 50px;
+    width:50%;
+    background-color: $primary;
+    border-radius: 10px;
     margin-left: 5px;
     cursor: pointer;
+    margin-top: 50px;
   }
   .member{
     padding: 10px;
-    background: #eee;
+    background: rgb(210, 210, 210);
     border:#000;
     cursor: pointer;
     margin: 5px 2px;
     box-shadow: 0 8px 8px -4px lightblue;
   }
   .member.active{
-    background: blueviolet;
+    background: $dark;
     color:#fff;
   }
   .member:hover{
