--- a/src/sass/partials/_animation.scss
+++ b/src/sass/partials/_animation.scss
@@ -2,6 +2,10 @@ body {
   background-color: #252759;
 }
 
+.animation-container {
+  background-color: rgb(16, 16, 55);
+}
+
 .image-container {
   text-align: center;
   width: 75%;
