--- a/src/sass/partials/_map.scss
+++ b/src/sass/partials/_map.scss
@@ -14,3 +14,12 @@
   top: 85%;
   text-align: center;
 }
+
+.rules-icon {
+  width: 50px;
+  padding: 5px;
+  top: 0;
+  right: 0;
+  z-index: 1000;
+  cursor: pointer;
+}
