--- a/src/sass/partials/_games.scss
+++ b/src/sass/partials/_games.scss
@@ -3,6 +3,7 @@
   position: relative;
   width: 100%;
   height: 170px;
+  border: 1px solid white;
 
   &:before{
     content: "";
@@ -22,7 +23,7 @@
       position: absolute;
       bottom: 0;
       left: 0;
-      border-top: 29px solid #facd63;;
+      border-top: 29px solid #facd63;
       border-left: 29px solid $customBackground;
       border-right: 29px solid $customBackground;
   }
