--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -9,13 +9,15 @@ input {
 //$body-bg: rgb(16, 16, 55);
 
 $custom-dark: #2e2e2e;
-$body-bg:#a78eb8;
+$body-bg:#26272a;
 $dark: $custom-dark;
 $customBackground: $body-bg;
 $link-color: $dark;
 $link-hover-color: $custom-dark;
 $primary: #fd990d;
 $secondary: #644b77;
+$success: #4A8E41;
+$danger: #ffad39fe;
 
 @import "partials/animation";
 @import "partials/squad";
