--- a/src/sass/partials/_games.scss
+++ b/src/sass/partials/_games.scss
@@ -1,5 +1,5 @@
 .game-card {
-  background-color: #facd63;
+  background-color: #3C3D41;
   position: relative;
   width: 100%;
   height: 170px;
@@ -11,7 +11,7 @@
       position: absolute;
       top: 0;
       left: 0;
-      border-bottom: 29px solid #facd63;
+      border-bottom: 29px solid #3C3D41;
       border-left: 29px solid $customBackground;
       border-right: 29px solid $customBackground;
   }
@@ -22,7 +22,7 @@
       position: absolute;
       bottom: 0;
       left: 0;
-      border-top: 29px solid #facd63;;
+      border-top: 29px solid #3C3D41;
       border-left: 29px solid $customBackground;
       border-right: 29px solid $customBackground;
   }
