--- a/src/sass/partials/_modal.scss
+++ b/src/sass/partials/_modal.scss
@@ -24,14 +24,12 @@
 
   &--close {
     position: absolute;
-    font-size: 40px;
+    font-size: 50px;
     top: 0px;
     right: 0px;
     width: 50px;
-    color: rgb(161, 105, 0);
+    color: $danger;
   }
-
-  
 
   &--close:hover,
   &--close:focus {
