--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -19,6 +19,7 @@ $font-family-sans-serif: 'Vollkorn',
 serif;
 $success: #4A8E41;
 $danger: #ffad39fe;
+$input-bg: white;
 
 @import "partials/animation";
 @import "partials/squad";
