--- a/src/sass/partials/_fonts.scss
+++ b/src/sass/partials/_fonts.scss
@@ -7,3 +7,10 @@
   text-transform: uppercase;
   font-size: 18px;
 }
+
+.bitecode {
+  font-weight: 600;
+  font-size: 70px;
+  text-align: center;
+  letter-spacing: 7px;
+}
