--- a/src/sass/partials/_games.scss
+++ b/src/sass/partials/_games.scss
@@ -2,8 +2,7 @@
   background-color: #3C3D41;
   position: relative;
   width: 100%;
-  height: 170px;
-  border: 1px solid white;
+  height: 200px;
 
   &:before{
     content: "";
@@ -24,7 +23,7 @@
       bottom: 0;
       left: 0;
 
-      border-top: 29px solid #facd63;
+      border-top: 29px solid #3C3D41;
       border-left: 29px solid $customBackground;
       border-right: 29px solid $customBackground;
   }
