--- a/src/sass/partials/_chat.scss
+++ b/src/sass/partials/_chat.scss
@@ -95,7 +95,7 @@ input {
     font-size: 20px;
   }
   .member.active{
-    background: $dark;
+    background: rgb(90, 90, 90);
     color:#fff;
     font-size: 20px;
   }
@@ -122,10 +122,10 @@ input {
     flex-direction: row;
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
     margin: 5px 10px;
+    background-color: #000;
   }
   .message-data{
     padding:5px;
-    border: 1px solid green;
     color: white;
   }
   .message.self{
